fix title & visible

--- a/src/assets/css/cms-single.less
+++ b/src/assets/css/cms-single.less
@@ -34,10 +34,10 @@
         }
     }
 }
-// .m-single-comment {
-    
-// }
 @media print{
     .m-single-comment{.none;}
 }
 
+.m-single-null{
+    padding:20px 0;
+}
